add configuration properties for npg client

--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,11 @@ PAYMENT_TRANSACTIONS_GATEWAY_READ_TIMEOUT=10000
 PAYMENT_TRANSACTIONS_GATEWAY_CONNECTION_TIMEOUT=10000
 PAYMENT_TRANSACTIONS_GATEWAY_API_KEY=PAYMENT_TRANSACTIONS_GATEWAY_API_KEY
 
+NPG_URI="http://127.0.0.1:8000"
+NPG_READ_TIMEOUT=10000
+NPG_CONNECTION_TIMEOUT=10000
+NPG_API_KEY=NPG_API_KEY
+
 NODO_CONNECTION_STRING="{\"idPSP\":\"idPsp\",\"idChannel\":\"idChannel\",\"idBrokerPSP\":\"idBrokerPsp\",\"password\":\"password\"}"
 NODO_URI="http://127.0.0.1:3002/nodo-per-pm/v2"
 NODO_READ_TIMEOUT=10000
