--- a/src/test/resources/application.test.properties
+++ b/src/test/resources/application.test.properties
@@ -28,6 +28,11 @@ paymentTransactionsGateway.readTimeout=1000
 paymentTransactionsGateway.connectionTimeout=1000
 paymentTransactionsGateway.apiKey=API_KEY
 
+npg.uri=https://stg-ta.nexigroup.com/api/phoenix-0.0/psp/api/v1
+npg.readTimeout=1000
+npg.connectionTimeout=1000
+npg.client.apiKey=npg-api-key
+
 server.port=9000
 
 management.endpoint.health.probes.enabled=true
