--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -79,6 +79,9 @@ microservice-chart:
     PAYMENT_TRANSACTIONS_GATEWAY_URI: https://api.dev.platform.pagopa.it/payment-transactions-gateway/internal/v1
     PAYMENT_TRANSACTIONS_GATEWAY_READ_TIMEOUT: "10000"
     PAYMENT_TRANSACTIONS_GATEWAY_CONNECTION_TIMEOUT: "10000"
+    NPG_URI: https://stg-ta.nexigroup.com/api/phoenix-0.0/psp/api/v1
+    NPG_READ_TIMEOUT: "10000"
+    NPG_CONNECTION_TIMEOUT: "10000"
     NOTIFICATIONS_SERVICE_URI: https://api.dev.platform.pagopa.it/ecommerce/notifications-service/v1
     NOTIFICATIONS_SERVICE_READ_TIMEOUT: "10000"
     NOTIFICATIONS_SERVICE_CONNECTION_TIMEOUT: "10000"
@@ -121,6 +124,7 @@ microservice-chart:
     NOTIFICATIONS_SERVICE_API_KEY: notifications-service-api-key
     PERSONAL_DATA_VAULT_API_KEY: personal-data-vault-api-key
     PAYMENT_TRANSACTIONS_GATEWAY_API_KEY: payment-transactions-gateway-api-key
+    NPG_API_KEY: npg-api-key
     OTEL_EXPORTER_OTLP_HEADERS: elastic-otel-token-header
   keyvault:
     name: "pagopa-d-ecommerce-kv"
