implement npg refund logic

--- a/.env.example
+++ b/.env.example
@@ -49,3 +49,8 @@ PERSONAL_DATA_VAULT_API_BASE_PATH="http://pagopa-pdv-mock:8080"
 
 SEND_PAYMENT_RESULT_TIMEOUT_SECONDS=3900
 SEND_PAYMENT_RESULT_EXPIRATION_OFFSET_SECONDS=5
+
+NPG_URI="http://127.0.0.1:8000"
+NPG_READ_TIMEOUT=10000
+NPG_CONNECTION_TIMEOUT=10000
+NPG_API_KEY=NPG_API_KEY
