--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -58,3 +58,8 @@ confidentialDataManager.personalDataVault.apiBasePath=${PERSONAL_DATA_VAULT_API_
 
 sendPaymentResult.timeoutSeconds=${SEND_PAYMENT_RESULT_TIMEOUT_SECONDS}
 sendPaymentResult.expirationOffset=${SEND_PAYMENT_RESULT_EXPIRATION_OFFSET_SECONDS}
+
+npg.uri=${NPG_URI}
+npg.readTimeout=${NPG_READ_TIMEOUT}
+npg.connectionTimeout=${NPG_CONNECTION_TIMEOUT}
+npg.client.apiKey=${NPG_API_KEY}
