--- a/src/test/resources/application.test.properties
+++ b/src/test/resources/application.test.properties
@@ -51,3 +51,8 @@ confidentialDataManager.personalDataVault.apiBasePath=localhost
 
 sendPaymentResult.timeoutSeconds=3900
 sendPaymentResult.expirationOffset=10
+
+npg.uri=https://stg-ta.nexigroup.com/api/phoenix-0.0/psp/api/v1
+npg.readTimeout=1000
+npg.connectionTimeout=1000
+npg.client.apiKey=npg-api-key
