--- a/helm/values-prod.yaml
+++ b/helm/values-prod.yaml
@@ -59,6 +59,9 @@ microservice-chart:
       SEND_PAYMENT_RESULT_TIMEOUT_SECONDS: "3900"
       SEND_PAYMENT_RESULT_EXPIRATION_OFFSET_SECONDS: "5"
       TRANSIENT_QUEUES_TTL_SECONDS: "2592000"
+      NPG_URI: https://xpay.nexigroup.com/api/phoenix-0.0
+      NPG_READ_TIMEOUT: "10000"
+      NPG_CONNECTION_TIMEOUT: "10000"
       ECS_SERVICE_NAME: pagopa-ecommerce-event-dispatcher-service-blue
       ECS_SERVICE_ENVIRONMENT: prod
     envSecret:
@@ -72,6 +75,7 @@ microservice-chart:
       PERSONAL_DATA_VAULT_API_KEY: personal-data-vault-api-key
       OTEL_EXPORTER_OTLP_HEADERS: elastic-otel-token-header
       PAYMENT_TRANSACTIONS_GATEWAY_API_KEY: payment-transactions-gateway-api-key
+      NPG_API_KEY: npg-api-key
   image:
     repository: pagopapcommonacr.azurecr.io/pagopaecommerceeventdispatcherservice
     tag: "0.9.0"
@@ -174,6 +178,9 @@ microservice-chart:
     ECS_SERVICE_NAME: pagopa-ecommerce-event-dispatcher-service
     ECS_SERVICE_ENVIRONMENT: prod
     TRANSIENT_QUEUES_TTL_SECONDS: "2592000"
+    NPG_URI: https://xpay.nexigroup.com/api/phoenix-0.0
+    NPG_READ_TIMEOUT: "10000"
+    NPG_CONNECTION_TIMEOUT: "10000"
   envSecret:
     ECOMMERCE_STORAGE_TRANSIENT_QUEUE_KEY: ecommerce-storage-transient-account-key
     MONGO_PASSWORD: mongo-ecommerce-password
@@ -185,6 +192,7 @@ microservice-chart:
     PERSONAL_DATA_VAULT_API_KEY: personal-data-vault-api-key
     OTEL_EXPORTER_OTLP_HEADERS: elastic-otel-token-header
     PAYMENT_TRANSACTIONS_GATEWAY_API_KEY: payment-transactions-gateway-api-key
+    NPG_API_KEY: npg-api-key
   keyvault:
     name: "pagopa-p-ecommerce-kv"
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
