--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -85,6 +85,7 @@ microservice-chart:
     NODO_URI: https://api.uat.platform.pagopa.it/nodo/nodo-per-pm/v2
     NODO_READ_TIMEOUT: "10000"
     NODO_CONNECTION_TIMEOUT: "10000"
+    NODO_ECOMMERCE_CLIENT_ID: ecommdev
     MONGO_HOST: pagopa-d-weu-ecommerce-cosmos-account.mongo.cosmos.azure.com
     MONGO_USERNAME: pagopa-d-weu-ecommerce-cosmos-account
     MONGO_PORT: "10255"
