--- a/helm/values-uat.yaml
+++ b/helm/values-uat.yaml
@@ -62,6 +62,7 @@ microservice-chart:
       NPG_URI: https://stg-ta.nexigroup.com/api/phoenix-0.0
       NPG_READ_TIMEOUT: "10000"
       NPG_CONNECTION_TIMEOUT: "10000"
+      NPG_CARDS_PSP_LIST: "BCITITMM"
       ECS_SERVICE_NAME: pagopa-ecommerce-event-dispatcher-service-blue
       ECS_SERVICE_ENVIRONMENT: uat
     envSecret:
@@ -76,6 +77,7 @@ microservice-chart:
       OTEL_EXPORTER_OTLP_HEADERS: elastic-otel-token-header
       PAYMENT_TRANSACTIONS_GATEWAY_API_KEY: payment-transactions-gateway-api-key
       NPG_API_KEY: npg-api-key
+      NPG_CARDS_PSP_KEYS: npg-cards-psp-keys
   image:
     repository: pagopaucommonacr.azurecr.io/pagopaecommerceeventdispatcherservice
     tag: "0.10.6"
@@ -185,6 +187,7 @@ microservice-chart:
     NPG_URI: https://stg-ta.nexigroup.com/api/phoenix-0.0
     NPG_READ_TIMEOUT: "10000"
     NPG_CONNECTION_TIMEOUT: "10000"
+    NPG_CARDS_PSP_LIST: "BCITITMM"
     ECS_SERVICE_NAME: pagopa-ecommerce-event-dispatcher-service
     ECS_SERVICE_ENVIRONMENT: uat
   envSecret:
@@ -199,6 +202,7 @@ microservice-chart:
     OTEL_EXPORTER_OTLP_HEADERS: elastic-otel-token-header
     PAYMENT_TRANSACTIONS_GATEWAY_API_KEY: payment-transactions-gateway-api-key
     NPG_API_KEY: npg-api-key
+    NPG_CARDS_PSP_KEYS: npg-cards-psp-keys
   keyvault:
     name: "pagopa-u-ecommerce-kv"
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
