--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -65,3 +65,5 @@ npg.uri=${NPG_URI}
 npg.readTimeout=${NPG_READ_TIMEOUT}
 npg.connectionTimeout=${NPG_CONNECTION_TIMEOUT}
 npg.client.apiKey=${NPG_API_KEY}
+npg.authorization.cards.keys=${NPG_CARDS_PSP_KEYS}
+npg.authorization.cards.pspList=${NPG_CARDS_PSP_LIST}
