feat: use npg psps key for refund transaction

--- a/src/test/resources/application.test.properties
+++ b/src/test/resources/application.test.properties
@@ -58,3 +58,5 @@ npg.uri=https://stg-ta.nexigroup.com/api/phoenix-0.0/psp/api/v1
 npg.readTimeout=1000
 npg.connectionTimeout=1000
 npg.client.apiKey=npg-api-key
+npg.authorization.cards.keys={"psp1":"key1","psp2":"key2"}
+npg.authorization.cards.pspList=psp1,psp2
