--- a/.env.example
+++ b/.env.example
@@ -55,3 +55,5 @@ NPG_URI="http://127.0.0.1:8000"
 NPG_READ_TIMEOUT=10000
 NPG_CONNECTION_TIMEOUT=10000
 NPG_API_KEY=NPG_API_KEY
+NPG_CARDS_PSP_LIST=CIPBITMM,BNLIITRR,BCITITMM,UNCRITMM,BPPIITRRXXX,PPAYITR1XXX
+NPG_CARDS_PSP_KEYS={"CIPBITMM":"CIPBITMM-api-key","BNLIITRR":"BNLIITRR-api-key","BCITITMM":"BCITITMM-api-key","UNCRITMM":"UNCRITMM-api-key","BPPIITRRXXX":"BPPIITRRXXX-api-key","PPAYITR1XXX":"PPAYITR1XXX-api-key"}EY
