--- a/helm/values-prod.yaml
+++ b/helm/values-prod.yaml
@@ -126,7 +126,7 @@ microservice-chart:
       cpu: "500m"
   autoscaling:
     enabled: true
-    minReplica: 2
+    minReplica: 3
     maxReplica: 10
     pollingInterval: 30 # seconds
     cooldownPeriod: 300 # seconds
@@ -213,3 +213,12 @@ microservice-chart:
                 operator: In
                 values:
                   - user
+    podAntiAffinity:
+      preferredDuringSchedulingIgnoredDuringExecution:
+        - weight: 100
+          podAffinityTerm:
+            labelSelector:
+              matchLabels:
+                app.kubernetes.io/instance: pagopaecommerceeventdispatcherservice
+            namespaces: [ "ecommerce" ]
+            topologyKey: topology.kubernetes.io/zone
