--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,10 @@
 			<version>1.2.3</version>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.integration</groupId>
+			<artifactId>spring-integration-redis</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.mockito.kotlin</groupId>
 			<artifactId>mockito-kotlin</artifactId>
 			<version>4.0.0</version>
