--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -67,3 +67,7 @@ npg.connectionTimeout=${NPG_CONNECTION_TIMEOUT}
 npg.client.apiKey=${NPG_API_KEY}
 npg.authorization.cards.keys=${NPG_CARDS_PSP_KEYS}
 npg.authorization.cards.pspList=${NPG_CARDS_PSP_LIST}
+
+redisStream.streamKey=${REDIS_STREAM_STREAM_KEY}
+redisStream.consumerGroupPrefix=${REDIS_STREAM_CONSUMER_GROUP_PREFIX}
+redisStream.consumerNamePrefix=${REDIS_STREAM_CONSUMER_NAME_PREFIX}
