--- a/src/test/resources/application.test.properties
+++ b/src/test/resources/application.test.properties
@@ -60,3 +60,7 @@ npg.connectionTimeout=1000
 npg.client.apiKey=npg-api-key
 npg.authorization.cards.keys={"psp1":"key1","psp2":"key2"}
 npg.authorization.cards.pspList=psp1,psp2
+
+redisStream.streamKey=event-dispatcher-commands
+redisStream.consumerGroupPrefix=event-dispatcher
+redisStream.consumerNamePrefix=event-dispatcher
