feat: add event handler service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -71,3 +71,4 @@ npg.authorization.cards.pspList=${NPG_CARDS_PSP_LIST}
 redisStream.streamKey=${REDIS_STREAM_STREAM_KEY}
 redisStream.consumerGroupPrefix=${REDIS_STREAM_CONSUMER_GROUP_PREFIX}
 redisStream.consumerNamePrefix=${REDIS_STREAM_CONSUMER_NAME_PREFIX}
+eventReceiver.status.pollingChron=${EVENT_RECEIVER_STATUS_POLLING_CHRON}
