--- a/src/test/resources/application.test.properties
+++ b/src/test/resources/application.test.properties
@@ -64,3 +64,4 @@ npg.authorization.cards.pspList=psp1,psp2
 redisStream.streamKey=event-dispatcher-commands
 redisStream.consumerGroupPrefix=event-dispatcher
 redisStream.consumerNamePrefix=event-dispatcher
+eventReceiver.status.pollingChron=*/10 * * * * *
