--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -119,6 +119,7 @@ microservice-chart:
     REDIS_STREAM_STREAM_KEY: "event-dispatcher-commands"
     REDIS_STREAM_CONSUMER_GROUP_PREFIX: "event-dispatcher"
     REDIS_STREAM_CONSUMER_NAME_PREFIX: "event-dispatcher"
+    EVENT_RECEIVER_STATUS_POLLING_CHRON: "*/10 * * * * *"
   envSecret:
     ECOMMERCE_STORAGE_TRANSIENT_QUEUE_KEY: ecommerce-storage-transient-account-key
     MONGO_PASSWORD: mongo-ecommerce-password
