--- a/helm/values-prod.yaml
+++ b/helm/values-prod.yaml
@@ -66,10 +66,10 @@ microservice-chart:
       ECS_SERVICE_NAME: pagopa-ecommerce-event-dispatcher-service-blue
       ECS_SERVICE_ENVIRONMENT: prod
       NPG_CARDS_PSP_LIST: "" #TODO to be filled with psp id list that are expected to be present into psp api keys configuration
-      REDIS_STREAM_STREAM_KEY: "event-dispatcher-commands"
-      REDIS_STREAM_CONSUMER_GROUP_PREFIX: "event-dispatcher"
-      REDIS_STREAM_CONSUMER_NAME_PREFIX: "event-dispatcher"
-      EVENT_RECEIVER_STATUS_POLLING_CHRON: "*/10 * * * * *"
+      REDIS_STREAM_EVENT_CONTROLLER_STREAM_KEY: "event-dispatcher-commands"
+      REDIS_STREAM_EVENT_CONTROLLER_CONSUMER_GROUP_PREFIX: "event-dispatcher"
+      REDIS_STREAM_EVENT_CONTROLLER_CONSUMER_NAME_PREFIX: "event-dispatcher"
+      EVENT_CONTROLLER__STATUS_POLLING_CHRON: "*/10 * * * * *"
     envSecret:
       ECOMMERCE_STORAGE_TRANSIENT_QUEUE_KEY: ecommerce-storage-transient-account-key
       MONGO_PASSWORD: mongo-ecommerce-password
@@ -190,10 +190,10 @@ microservice-chart:
     NPG_READ_TIMEOUT: "10000"
     NPG_CONNECTION_TIMEOUT: "10000"
     NPG_CARDS_PSP_LIST: "" #TODO to be filled with psp id list that are expected to be present into psp api keys configuration
-    REDIS_STREAM_STREAM_KEY: "event-dispatcher-commands"
-    REDIS_STREAM_CONSUMER_GROUP_PREFIX: "event-dispatcher"
-    REDIS_STREAM_CONSUMER_NAME_PREFIX: "event-dispatcher"
-    EVENT_RECEIVER_STATUS_POLLING_CHRON: "*/10 * * * * *"
+    REDIS_STREAM_EVENT_CONTROLLER_STREAM_KEY: "event-dispatcher-commands"
+    REDIS_STREAM_EVENT_CONTROLLER_CONSUMER_GROUP_PREFIX: "event-dispatcher"
+    REDIS_STREAM_EVENT_CONTROLLER_CONSUMER_NAME_PREFIX: "event-dispatcher"
+    EVENT_CONTROLLER__STATUS_POLLING_CHRON: "*/10 * * * * *"
   envSecret:
     ECOMMERCE_STORAGE_TRANSIENT_QUEUE_KEY: ecommerce-storage-transient-account-key
     MONGO_PASSWORD: mongo-ecommerce-password
