--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -68,7 +68,7 @@ npg.client.apiKey=${NPG_API_KEY}
 npg.authorization.cards.keys=${NPG_CARDS_PSP_KEYS}
 npg.authorization.cards.pspList=${NPG_CARDS_PSP_LIST}
 
-redisStream.streamKey=${REDIS_STREAM_EVENT_CONTROLLER_STREAM_KEY}
-redisStream.consumerGroupPrefix=${REDIS_STREAM_EVENT_CONTROLLER_CONSUMER_GROUP_PREFIX}
-redisStream.consumerNamePrefix=${REDIS_STREAM_EVENT_CONTROLLER_CONSUMER_NAME_PREFIX}
-eventReceiver.status.pollingChron=${EVENT_CONTROLLER__STATUS_POLLING_CHRON}
+redisStream.eventController.streamKey=${REDIS_STREAM_EVENT_CONTROLLER_STREAM_KEY}
+redisStream.eventController.consumerGroupPrefix=${REDIS_STREAM_EVENT_CONTROLLER_CONSUMER_GROUP_PREFIX}
+redisStream.eventController.consumerNamePrefix=${REDIS_STREAM_EVENT_CONTROLLER_CONSUMER_NAME_PREFIX}
+eventController.status.pollingChron=${EVENT_CONTROLLER__STATUS_POLLING_CHRON}
