--- a/src/test/resources/application.test.properties
+++ b/src/test/resources/application.test.properties
@@ -19,9 +19,9 @@ nodo.readTimeout=10000
 nodo.connectionTimeout=10000
 nodo.ecommerce.clientId=key
 
-spring.redis.host=redis
-spring.redis.password=redis
-spring.redis.port=9999
+spring.redis.host=localhost
+spring.redis.password=redis_password
+spring.redis.port=6380
 spring.redis.ssl=false
 spring.data.mongodb.uri=mongodb://mongo:mongo@$mongo:6080/
 spring.data.mongodb.database=ecommerce
@@ -61,7 +61,7 @@ npg.client.apiKey=npg-api-key
 npg.authorization.cards.keys={"psp1":"key1","psp2":"key2"}
 npg.authorization.cards.pspList=psp1,psp2
 
-redisStream.streamKey=event-dispatcher-commands
-redisStream.consumerGroupPrefix=event-dispatcher
-redisStream.consumerNamePrefix=event-dispatcher
-eventReceiver.status.pollingChron=*/10 * * * * *
+redisStream.eventController.streamKey=event-dispatcher-commands
+redisStream.eventController.consumerGroupPrefix=event-dispatcher
+redisStream.eventController.consumerNamePrefix=event-dispatcher
+eventController.status.pollingChron=*/10 * * * * *
