--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -72,3 +72,5 @@ redisStream.eventController.streamKey=${REDIS_STREAM_EVENT_CONTROLLER_STREAM_KEY
 redisStream.eventController.consumerGroupPrefix=${REDIS_STREAM_EVENT_CONTROLLER_CONSUMER_GROUP_PREFIX}
 redisStream.eventController.consumerNamePrefix=${REDIS_STREAM_EVENT_CONTROLLER_CONSUMER_NAME_PREFIX}
 eventController.status.pollingChron=${EVENT_CONTROLLER_STATUS_POLLING_CHRON}
+
+spring.task.scheduling.pool.size=5
