--- a/pom.xml
+++ b/pom.xml
@@ -19,9 +19,10 @@
 		<kotlinx-coroutines.version>1.6.2</kotlinx-coroutines.version>
 		<spring-cloud-azure.version>4.0.0</spring-cloud-azure.version>
 		<jacoco.version>0.8.8</jacoco.version>
-		<pagopa-ecommerce-commons.version>1.0.0</pagopa-ecommerce-commons.version>
+		<pagopa-ecommerce-commons.version>1.4.1</pagopa-ecommerce-commons.version>
 		<sonar.coverage.exclusions> <!-- the members of the following list should be in the same line -->
-			**/it/pagopa/transactions/**
+			**/it/pagopa/transactions/**,
+			**/it/pagopa/ecommerce/eventdispatcher/validation/**
 		</sonar.coverage.exclusions>
 		<spotless.version>2.28.0</spotless.version>
 		<mock-web-server.version>4.11.0</mock-web-server.version>
@@ -117,6 +118,10 @@
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
 			<version>1.2.3</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.integration</groupId>
+			<artifactId>spring-integration-redis</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.mockito.kotlin</groupId>
@@ -315,6 +320,7 @@
 							<sourceDirs>
 								<sourceDir>${project.basedir}/src/main/kotlin</sourceDir>
 								<sourceDir>${project.build.directory}/generated-sources/openapi/src/main/java</sourceDir>
+								<sourceDir>${project.build.directory}/generated-sources/openapi/src/main/kotlin</sourceDir>
 								<sourceDir>${project.build.directory}/generated-sources/jsonschema2pojo</sourceDir>
 								<sourceDir>${project.basedir}/src/main/java</sourceDir>
 							</sourceDirs>
@@ -403,6 +409,32 @@
 							<modelPackage>it.pagopa.generated.notifications.v1.dto</modelPackage>
 							<apiPackage>it.pagopa.generated.notifications.v1.api</apiPackage>
 							<modelNameSuffix>dto</modelNameSuffix>
+						</configuration>
+					</execution>
+					<execution>
+						<id>event-dispatcher-api</id>
+						<goals>
+							<goal>generate</goal>
+						</goals>
+						<configuration>
+							<inputSpec>${project.basedir}/api-spec/event-dispatcher-api.yaml</inputSpec>
+							<generatorName>kotlin-spring</generatorName>
+							<library>spring-boot</library>
+							<modelNameSuffix>Dto</modelNameSuffix>
+							<generateApiTests>false</generateApiTests>
+							<generateModelTests>false</generateModelTests>
+							<configOptions>
+								<basePackage>it.pagopa.generated.eventdispatcher.server</basePackage>
+								<modelPackage>it.pagopa.generated.eventdispatcher.server.model</modelPackage>
+								<apiPackage>it.pagopa.generated.eventdispatcher.server.api</apiPackage>
+								<configPackage>it.pagopa.generated.eventdispatcher.server.config</configPackage>
+								<interfaceOnly>true</interfaceOnly>
+								<hideGenerationTimestamp>true</hideGenerationTimestamp>
+								<skipDefaultInterface>true</skipDefaultInterface>
+								<useSwaggerUI>false</useSwaggerUI>
+								<reactive>true</reactive>
+								<enumPropertyNaming>UPPERCASE</enumPropertyNaming>
+							</configOptions>
 						</configuration>
 					</execution>
 				</executions>
@@ -509,6 +541,8 @@
 					<connectionUrl>scm:git:https://github.com/pagopa/pagopa-ecommerce-commons.git</connectionUrl>
 					<scmVersionType>tag</scmVersionType>
 					<scmVersion>${pagopa-ecommerce-commons.version}</scmVersion>
+					<scmVersionType>branch</scmVersionType>
+					<scmVersion>CHK-2353-redis-stream-integration</scmVersion>
 					<goals>install -DskipTests</goals>
 				</configuration>
 				<executions>
