feat: add environment variables

--- a/.env.example
+++ b/.env.example
@@ -57,3 +57,8 @@ NPG_CONNECTION_TIMEOUT=10000
 NPG_API_KEY=NPG_API_KEY
 NPG_CARDS_PSP_LIST=CIPBITMM,BNLIITRR,BCITITMM,UNCRITMM,BPPIITRRXXX,PPAYITR1XXX
 NPG_CARDS_PSP_KEYS={"CIPBITMM":"CIPBITMM-api-key","BNLIITRR":"BNLIITRR-api-key","BCITITMM":"BCITITMM-api-key","UNCRITMM":"UNCRITMM-api-key","BPPIITRRXXX":"BPPIITRRXXX-api-key","PPAYITR1XXX":"PPAYITR1XXX-api-key"}EY
+
+REDIS_STREAM_EVENT_CONTROLLER_STREAM_KEY=event-dispatcher-commands
+REDIS_STREAM_EVENT_CONTROLLER_CONSUMER_GROUP_PREFIX=event-dispatcher-consumer-group
+REDIS_STREAM_EVENT_CONTROLLER_CONSUMER_NAME_PREFIX=event-dispatcher-consumer-name
+EVENT_CONTROLLER_STATUS_POLLING_CHRON=*/10 * * * * *
