--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -67,3 +67,11 @@ npg.connectionTimeout=${NPG_CONNECTION_TIMEOUT}
 npg.client.apiKey=${NPG_API_KEY}
 npg.authorization.cards.keys=${NPG_CARDS_PSP_KEYS}
 npg.authorization.cards.pspList=${NPG_CARDS_PSP_LIST}
+
+redisStream.eventController.streamKey=${REDIS_STREAM_EVENT_CONTROLLER_STREAM_KEY}
+redisStream.eventController.consumerGroupPrefix=${REDIS_STREAM_EVENT_CONTROLLER_CONSUMER_GROUP_PREFIX}
+redisStream.eventController.consumerNamePrefix=${REDIS_STREAM_EVENT_CONTROLLER_CONSUMER_NAME_PREFIX}
+redisStream.eventController.failOnErrorCreatingConsumerGroup=${REDIS_STREAM_EVENT_CONTROLLER_FAIL_ON_ERROR_CREATING_CONSUMER_GROUP:true}
+eventController.status.pollingChron=${EVENT_CONTROLLER_STATUS_POLLING_CHRON}
+
+spring.task.scheduling.pool.size=5
