--- a/src/test/resources/application.test.properties
+++ b/src/test/resources/application.test.properties
@@ -60,3 +60,9 @@ npg.connectionTimeout=1000
 npg.client.apiKey=npg-api-key
 npg.authorization.cards.keys={"psp1":"key1","psp2":"key2"}
 npg.authorization.cards.pspList=psp1,psp2
+
+redisStream.eventController.streamKey=event-dispatcher-commands
+redisStream.eventController.consumerGroupPrefix=event-dispatcher
+redisStream.eventController.consumerNamePrefix=event-dispatcher
+redisStream.eventController.failOnErrorCreatingConsumerGroup=false
+eventController.status.pollingChron=*/10 * * * * *
