--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,10 @@
 			<version>1.2.3</version>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.integration</groupId>
+			<artifactId>spring-integration-redis</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.mockito.kotlin</groupId>
 			<artifactId>mockito-kotlin</artifactId>
 			<version>4.0.0</version>
@@ -316,6 +320,7 @@
 							<sourceDirs>
 								<sourceDir>${project.basedir}/src/main/kotlin</sourceDir>
 								<sourceDir>${project.build.directory}/generated-sources/openapi/src/main/java</sourceDir>
+								<sourceDir>${project.build.directory}/generated-sources/openapi/src/main/kotlin</sourceDir>
 								<sourceDir>${project.build.directory}/generated-sources/jsonschema2pojo</sourceDir>
 								<sourceDir>${project.basedir}/src/main/java</sourceDir>
 							</sourceDirs>
@@ -404,6 +409,32 @@
 							<modelPackage>it.pagopa.generated.notifications.v1.dto</modelPackage>
 							<apiPackage>it.pagopa.generated.notifications.v1.api</apiPackage>
 							<modelNameSuffix>dto</modelNameSuffix>
+						</configuration>
+					</execution>
+					<execution>
+						<id>event-dispatcher-api</id>
+						<goals>
+							<goal>generate</goal>
+						</goals>
+						<configuration>
+							<inputSpec>${project.basedir}/api-spec/event-dispatcher-api.yaml</inputSpec>
+							<generatorName>kotlin-spring</generatorName>
+							<library>spring-boot</library>
+							<modelNameSuffix>Dto</modelNameSuffix>
+							<generateApiTests>false</generateApiTests>
+							<generateModelTests>false</generateModelTests>
+							<configOptions>
+								<basePackage>it.pagopa.generated.eventdispatcher.server</basePackage>
+								<modelPackage>it.pagopa.generated.eventdispatcher.server.model</modelPackage>
+								<apiPackage>it.pagopa.generated.eventdispatcher.server.api</apiPackage>
+								<configPackage>it.pagopa.generated.eventdispatcher.server.config</configPackage>
+								<interfaceOnly>true</interfaceOnly>
+								<hideGenerationTimestamp>true</hideGenerationTimestamp>
+								<skipDefaultInterface>true</skipDefaultInterface>
+								<useSwaggerUI>false</useSwaggerUI>
+								<reactive>true</reactive>
+								<enumPropertyNaming>UPPERCASE</enumPropertyNaming>
+							</configOptions>
 						</configuration>
 					</execution>
 				</executions>
