--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -76,6 +76,8 @@ microservice-chart:
     TRANSACTIONS_NOTIFICATIONS_RETRY_QUEUE_NAME: pagopa-d-weu-ecommerce-transaction-notifications-retry-queue
     TRANSACTIONS_NOTIFICATIONS_QUEUE_NAME: pagopa-d-weu-ecommerce-transaction-notifications-queue
     TRANSACTIONS_DEAD_LETTER_QUEUE_NAME: pagopa-d-weu-ecommerce-transactions-dead-letter-queue
+    TRANSACTIONS_AUTHORIZATION_REQUESTED_QUEUE_NAME: pagopa-d-weu-ecommerce-transactions-authorization-requested-queue
+    TRANSACTIONS_AUTHORIZATION_REQUESTED_RETRY_QUEUE_NAME: pagopa-d-weu-ecommerce-transactions-authorization-requested-retry-queue
     PAYMENT_TRANSACTIONS_GATEWAY_URI: https://api.dev.platform.pagopa.it/payment-transactions-gateway/internal/v1
     PAYMENT_TRANSACTIONS_GATEWAY_READ_TIMEOUT: "10000"
     PAYMENT_TRANSACTIONS_GATEWAY_CONNECTION_TIMEOUT: "10000"
@@ -101,6 +103,8 @@ microservice-chart:
     CLOSE_PAYMENT_RETRY_EVENT_MAX_ATTEMPTS: "3"
     NOTIFICATION_RETRY_EVENT_BASE_INTERVAL_SECONDS: "600"
     NOTIFICATION_RETRY_EVENT_MAX_ATTEMPTS: "3"
+    AUTHORIZATION_REQUESTED_RETRY_EVENT_BASE_INTERVAL_SECONDS: "600"
+    AUTHORIZATION_REQUESTED_RETRY_EVENT_MAX_ATTEMPTS: "3"
     PERSONAL_DATA_VAULT_API_BASE_PATH: "https://api.uat.tokenizer.pdv.pagopa.it/tokenizer/v1"
     SEND_PAYMENT_RESULT_TIMEOUT_SECONDS: "3900"
     SEND_PAYMENT_RESULT_EXPIRATION_OFFSET_SECONDS: "5"
