--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,8 @@ azurestorage.queues.transactionclosepayment.name=${TRANSACTIONS_CLOSE_PAYMENT_QU
 azurestorage.queues.transactionclosepaymentretry.name=${TRANSACTIONS_CLOSE_PAYMENT_RETRY_QUEUE_NAME}
 azurestorage.queues.transactionnotificationretry.name=${TRANSACTIONS_NOTIFICATIONS_RETRY_QUEUE_NAME}
 azurestorage.queues.transactionnotification.name=${TRANSACTIONS_NOTIFICATIONS_QUEUE_NAME}
+azurestorage.queues.transactionauthrequested.name=${TRANSACTIONS_AUTHORIZATION_REQUESTED_QUEUE_NAME}
+azurestorage.queues.transactionauthrequestedretry.name=${TRANSACTIONS_AUTHORIZATION_REQUESTED_RETRY_QUEUE_NAME}
 azurestorage.transient.connectionstring=${QUEUE_TRANSIENT_CONNECTION_STRING}
 azurestorage.queues.deadletter.name=${TRANSACTIONS_DEAD_LETTER_QUEUE_NAME}
 azurestorage.deadletter.connectionstring=${QUEUE_DEADLETTER_CONNECTION_STRING}
@@ -46,6 +48,10 @@ refundRetry.maxAttempts=${REFUND_RETRY_EVENT_MAX_ATTEMPTS}
 closePaymentRetry.eventOffsetSeconds=${CLOSE_PAYMENT_RETRY_EVENT_BASE_INTERVAL_SECONDS}
 closePaymentRetry.maxAttempts=${CLOSE_PAYMENT_RETRY_EVENT_MAX_ATTEMPTS}
 closePaymentRetry.paymentTokenValidityTimeOffset=${CLOSE_PAYMENT_RETRY_EVENT_PAYMENT_TOKEN_VALIDITY_TIME_OFFSET:10}
+
+transactionsAuthRequestedRetry.eventOffsetSeconds=${AUTHORIZATION_REQUESTED_RETRY_EVENT_BASE_INTERVAL_SECONDS}
+transactionsAuthRequestedRetry.maxAttempts=${AUTHORIZATION_REQUESTED_RETRY_EVENT_MAX_ATTEMPTS}
+transactionsAuthRequestedRetry.paymentTokenValidityTimeOffset=${AUTHORIZATION_REQUESTED_RETRY_EVENT_PAYMENT_TOKEN_VALIDITY_TIME_OFFSET:10}
 
 notificationRetry.eventOffsetSeconds=${NOTIFICATION_RETRY_EVENT_BASE_INTERVAL_SECONDS}
 notificationRetry.maxAttempts=${NOTIFICATION_RETRY_EVENT_MAX_ATTEMPTS}
