--- a/helm/values-uat.yaml
+++ b/helm/values-uat.yaml
@@ -31,7 +31,7 @@ microservice-chart:
       NODO_URI: https://api.uat.platform.pagopa.it/nodo/nodo-per-pm/v2
       NODO_READ_TIMEOUT: "14000"
       NODO_CONNECTION_TIMEOUT: "14000"
-      NODO_ECOMMERCE_CLIENT_ID: ecomm
+      NODO_ECOMMERCE_CLIENT_ID: ecomm-blue
       MONGO_HOST: pagopa-u-weu-ecommerce-cosmos-account.mongo.cosmos.azure.com
       MONGO_USERNAME: pagopa-u-weu-ecommerce-cosmos-account
       MONGO_PORT: "10255"
