chore(conf): change uat blue env to point dedicated queues (#217)
* chore(conf): change uat blue env to point dedicated queues

* chore(conf): change client id for ecommerce uat blue node client

* chore(conf): leave only customized parameters

--- a/helm/values-uat.yaml
+++ b/helm/values-uat.yaml
@@ -16,72 +16,18 @@ microservice-chart:
         repository: pagopaucommonacr.azurecr.io/pagopaecommerceeventdispatcherservice
         tag: "latest"
         pullPolicy: Always
-    envConfig:
-      TRANSACTIONS_CLOSE_PAYMENT_QUEUE_NAME: pagopa-u-weu-ecommerce-transactions-close-payment-queue
-      TRANSACTIONS_CLOSE_PAYMENT_RETRY_QUEUE_NAME: pagopa-u-weu-ecommerce-transactions-close-payment-retry-queue
-      TRANSACTIONS_EXPIRATION_QUEUE_NAME: pagopa-u-weu-ecommerce-transactions-expiration-queue
-      TRANSACTIONS_REFUND_RETRY_QUEUE_NAME: pagopa-u-weu-ecommerce-transactions-refund-retry-queue
-      TRANSACTIONS_REFUND_QUEUE_NAME: pagopa-u-weu-ecommerce-transactions-refund-queue
-      TRANSACTIONS_NOTIFICATIONS_RETRY_QUEUE_NAME: pagopa-u-weu-ecommerce-transaction-notifications-retry-queue
-      TRANSACTIONS_NOTIFICATIONS_QUEUE_NAME: pagopa-u-weu-ecommerce-transaction-notifications-queue
-      TRANSACTIONS_DEAD_LETTER_QUEUE_NAME: pagopa-u-weu-ecommerce-transactions-dead-letter-queue
-      PAYMENT_TRANSACTIONS_GATEWAY_URI: https://api.uat.platform.pagopa.it/payment-transactions-gateway/internal/v1
-      PAYMENT_TRANSACTIONS_GATEWAY_READ_TIMEOUT: "10000"
-      PAYMENT_TRANSACTIONS_GATEWAY_CONNECTION_TIMEOUT: "10000"
-      NODO_URI: https://api.uat.platform.pagopa.it/nodo/nodo-per-pm/v2
-      NODO_READ_TIMEOUT: "14000"
-      NODO_CONNECTION_TIMEOUT: "14000"
-      NODO_ECOMMERCE_CLIENT_ID: ecomm
-      MONGO_HOST: pagopa-u-weu-ecommerce-cosmos-account.mongo.cosmos.azure.com
-      MONGO_USERNAME: pagopa-u-weu-ecommerce-cosmos-account
-      MONGO_PORT: "10255"
-      MONGO_SSL_ENABLED: "true"
-      REDIS_HOST: pagopa-u-weu-ecommerce-redis.redis.cache.windows.net
-      REDIS_PORT: "6380"
-      REDIS_SSL_ENABLED: "true"
-      ECOMMERCE_STORAGE_TRANSIENT_QUEUE_ACCOUNT_NAME: pagopauweuecommercetrsa
-      ECOMMERCE_STORAGE_TRANSIENT_QUEUE_ENDPOINT: https://pagopauweuecommercetrsa.queue.core.windows.net/pagopauweuecommercetrsa
-      REFUND_RETRY_EVENT_BASE_INTERVAL_SECONDS: "600"
-      REFUND_RETRY_EVENT_MAX_ATTEMPTS: "3"
-      CLOSE_PAYMENT_RETRY_EVENT_BASE_INTERVAL_SECONDS: "30"
-      CLOSE_PAYMENT_RETRY_EVENT_MAX_ATTEMPTS: "3"
-      NOTIFICATION_RETRY_EVENT_BASE_INTERVAL_SECONDS: "600"
-      NOTIFICATION_RETRY_EVENT_MAX_ATTEMPTS: "3"
-      NOTIFICATIONS_SERVICE_URI: https://api.uat.platform.pagopa.it/ecommerce/notifications-service/v1
-      NOTIFICATIONS_SERVICE_READ_TIMEOUT: "10000"
-      NOTIFICATIONS_SERVICE_CONNECTION_TIMEOUT: "10000"
-      PERSONAL_DATA_VAULT_API_BASE_PATH: "https://api.uat.tokenizer.pdv.pagopa.it/tokenizer/v1"
-      OTEL_RESOURCE_ATTRIBUTES: "service.name=pagopa-ecommerce-event-dispatcher-service-blue,service.deployment.environment=uat"
-      OTEL_EXPORTER_OTLP_ENDPOINT: "http://otel-collector.elastic-system.svc:4317"
-      OTEL_TRACES_EXPORTER: otlp
-      OTEL_METRICS_EXPORTER: otlp
-      OTEL_LOGS_EXPORTER: none
-      OTEL_TRACES_SAMPLER: "always_on"
-      SEND_PAYMENT_RESULT_TIMEOUT_SECONDS: "3900"
-      SEND_PAYMENT_RESULT_EXPIRATION_OFFSET_SECONDS: "5"
-      NPG_URI: https://stg-ta.nexigroup.com/api/phoenix-0.0
-      NPG_READ_TIMEOUT: "10000"
-      NPG_CONNECTION_TIMEOUT: "10000"
-      NPG_CARDS_PSP_LIST: "BCITITMM"
-      ECS_SERVICE_NAME: pagopa-ecommerce-event-dispatcher-service-blue
-      ECS_SERVICE_ENVIRONMENT: uat
-      REDIS_STREAM_EVENT_CONTROLLER_STREAM_KEY: "event-dispatcher-commands"
-      REDIS_STREAM_EVENT_CONTROLLER_CONSUMER_GROUP_PREFIX: "event-dispatcher"
-      REDIS_STREAM_EVENT_CONTROLLER_CONSUMER_NAME_PREFIX: "event-dispatcher"
-      EVENT_CONTROLLER_STATUS_POLLING_CHRON: "*/10 * * * * *"
-    envSecret:
-      ECOMMERCE_STORAGE_TRANSIENT_QUEUE_KEY: ecommerce-storage-transient-account-key
-      MONGO_PASSWORD: mongo-ecommerce-password
-      REDIS_PASSWORD: redis-ecommerce-password
-      NODO_CONNECTION_STRING: nodo-connection-string
-      QUEUE_TRANSIENT_CONNECTION_STRING: ecommerce-storage-transient-connection-string
-      QUEUE_DEADLETTER_CONNECTION_STRING: ecommerce-storage-deadletter-connection-string
-      NOTIFICATIONS_SERVICE_API_KEY: notifications-service-api-key
-      PERSONAL_DATA_VAULT_API_KEY: personal-data-vault-api-key
-      OTEL_EXPORTER_OTLP_HEADERS: elastic-otel-token-header
-      PAYMENT_TRANSACTIONS_GATEWAY_API_KEY: payment-transactions-gateway-api-key
-      NPG_API_KEY: npg-api-key
-      NPG_CARDS_PSP_KEYS: npg-cards-psp-keys
+      envConfig:
+        TRANSACTIONS_CLOSE_PAYMENT_QUEUE_NAME: pagopa-u-weu-ecommerce-transactions-close-payment-queue-b
+        TRANSACTIONS_CLOSE_PAYMENT_RETRY_QUEUE_NAME: pagopa-u-weu-ecommerce-transactions-close-payment-retry-queue-b
+        TRANSACTIONS_EXPIRATION_QUEUE_NAME: pagopa-u-weu-ecommerce-transactions-expiration-queue-b
+        TRANSACTIONS_REFUND_RETRY_QUEUE_NAME: pagopa-u-weu-ecommerce-transactions-refund-retry-queue-b
+        TRANSACTIONS_REFUND_QUEUE_NAME: pagopa-u-weu-ecommerce-transactions-refund-queue-b
+        TRANSACTIONS_NOTIFICATIONS_RETRY_QUEUE_NAME: pagopa-u-weu-ecommerce-transaction-notifications-retry-queue-b
+        TRANSACTIONS_NOTIFICATIONS_QUEUE_NAME: pagopa-u-weu-ecommerce-transaction-notifications-queue-b
+        TRANSACTIONS_DEAD_LETTER_QUEUE_NAME: pagopa-u-weu-ecommerce-transactions-dead-letter-queue-b
+        NODO_ECOMMERCE_CLIENT_ID: ecomm-blue
+        OTEL_RESOURCE_ATTRIBUTES: "service.name=pagopa-ecommerce-event-dispatcher-service-blue,service.deployment.environment=uat"
+        ECS_SERVICE_NAME: pagopa-ecommerce-event-dispatcher-service-blue
   image:
     repository: pagopaucommonacr.azurecr.io/pagopaecommerceeventdispatcherservice
     tag: "1.4.3"
