--- a/helm/values-prod.yaml
+++ b/helm/values-prod.yaml
@@ -78,6 +78,7 @@ microservice-chart:
       QUEUE_TRANSIENT_CONNECTION_STRING: ecommerce-storage-transient-connection-string
       QUEUE_DEADLETTER_CONNECTION_STRING: ecommerce-storage-deadletter-connection-string
       NOTIFICATIONS_SERVICE_API_KEY: notifications-service-api-key
+      TRANSACTIONS_SERVICE_API_KEY: transactions-service-auth-update-api-key
       PERSONAL_DATA_VAULT_API_KEY: personal-data-vault-api-key
       OTEL_EXPORTER_OTLP_HEADERS: elastic-otel-token-header
       PAYMENT_TRANSACTIONS_GATEWAY_API_KEY: payment-transactions-gateway-api-key
@@ -210,6 +211,7 @@ microservice-chart:
     QUEUE_TRANSIENT_CONNECTION_STRING: ecommerce-storage-transient-connection-string
     QUEUE_DEADLETTER_CONNECTION_STRING: ecommerce-storage-deadletter-connection-string
     NOTIFICATIONS_SERVICE_API_KEY: notifications-service-api-key
+    TRANSACTIONS_SERVICE_API_KEY: transactions-service-auth-update-api-key
     PERSONAL_DATA_VAULT_API_KEY: personal-data-vault-api-key
     OTEL_EXPORTER_OTLP_HEADERS: elastic-otel-token-header
     PAYMENT_TRANSACTIONS_GATEWAY_API_KEY: payment-transactions-gateway-api-key
