--- a/src/test/resources/application.test.properties
+++ b/src/test/resources/application.test.properties
@@ -52,7 +52,7 @@ notificationsService.readTimeout=10000
 notificationsService.connectionTimeout=10000
 notificationsService.apiKey=notifications-service-api-key
 
-transactionsService.uri=ttp://localhost/transactions-service
+transactionsService.uri=http://localhost/transactions-service
 transactionsService.readTimeout=10000
 transactionsService.connectionTimeout=10000
 transactionsService.apiKey=transactions-service-api-key
