--- a/helm/values-uat.yaml
+++ b/helm/values-uat.yaml
@@ -26,6 +26,7 @@ microservice-chart:
         TRANSACTIONS_NOTIFICATIONS_QUEUE_NAME: pagopa-u-weu-ecommerce-transaction-notifications-queue-b
         TRANSACTIONS_DEAD_LETTER_QUEUE_NAME: pagopa-u-weu-ecommerce-transactions-dead-letter-queue-b
         TRANSACTIONS_AUTHORIZATION_REQUESTED_QUEUE_NAME: pagopa-d-weu-ecommerce-transaction-auth-requested-queue-b
+        TRANSACTIONS_AUTHORIZATION_REQUESTED_RETRY_QUEUE_NAME: pagopa-d-weu-ecommerce-transaction-auth-requested-retry-queue-b
         NODO_ECOMMERCE_CLIENT_ID: ecomm-blue
         OTEL_RESOURCE_ATTRIBUTES: "service.name=pagopa-ecommerce-event-dispatcher-service-blue,service.deployment.environment=uat"
         ECS_SERVICE_NAME: pagopa-ecommerce-event-dispatcher-service-blue
