[CHK-2509] auth requested retry (#224)
* add first poc of get state handling

* fix building

* add transactions auth request client

* add handling get state

* add fun to evaluate payment token and visibility timeout

* add retry logic for auth requested event

* fix env vars

* fix spotless

* fix env vars

* fix spotless

* set queue name

* fix message receiver

* add ref to auth api key for authorization update

* add tests

* add correlationId from activationData for npg get state

* chore: refactoring retry class to extends proper abstract class

* chore: split get state from authorization state receiver retry class

* fix: add junit tests

* fix: add junit tests

* fix: add junit tests

* address pr comment and fix exception handling

* fix possible null in get state value

* fix: add junit tests

* fix: refactoring method name

* avoid cast null value

* fix: add junit tests + code refactoring

* fix optional field null point while casting

* fix: add test to cover ko auth status response

* fix transactions auth request base path

* fix: update openapi generator version to use oneOfInterfaces property

* add log for get state and patch auth request

* fix tests

* fix commons version

* add blue queue for uat

* fix unused imports and transactionId in place of UUIDs

* use value object in place of UUID

* fix consumer return value

* fix consumer return value

* add retry event to the retry queue consumer

* add tests

* add queue parameters and consumer

* fix spotless

* add tests

* add tests

* remove deadletterqueue invocation

* add tests

* update commons version

* fix uat helm values

* use helper to centralize business logic

* add test annotation

* fix spotless

* fix coverage

* add tests

* add tests

* fix retry queue and deadletter invocations

* fix spotless

* add tests

* refactor event name and event code

* update queues

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,7 @@ azurestorage.queues.transactionclosepaymentretry.name=${TRANSACTIONS_CLOSE_PAYME
 azurestorage.queues.transactionnotificationretry.name=${TRANSACTIONS_NOTIFICATIONS_RETRY_QUEUE_NAME}
 azurestorage.queues.transactionnotification.name=${TRANSACTIONS_NOTIFICATIONS_QUEUE_NAME}
 azurestorage.queues.transactionauthorizationrequested.name=${TRANSACTIONS_AUTHORIZATION_REQUESTED_QUEUE_NAME}
+azurestorage.queues.transactionauthorizationoutcomewaiting.name=${TRANSACTIONS_AUTHORIZATION_OUTCOME_WAITING_QUEUE_NAME}
 azurestorage.transient.connectionstring=${QUEUE_TRANSIENT_CONNECTION_STRING}
 azurestorage.queues.deadletter.name=${TRANSACTIONS_DEAD_LETTER_QUEUE_NAME}
 azurestorage.deadletter.connectionstring=${QUEUE_DEADLETTER_CONNECTION_STRING}
@@ -48,9 +49,9 @@ closePaymentRetry.eventOffsetSeconds=${CLOSE_PAYMENT_RETRY_EVENT_BASE_INTERVAL_S
 closePaymentRetry.maxAttempts=${CLOSE_PAYMENT_RETRY_EVENT_MAX_ATTEMPTS}
 closePaymentRetry.paymentTokenValidityTimeOffset=${CLOSE_PAYMENT_RETRY_EVENT_PAYMENT_TOKEN_VALIDITY_TIME_OFFSET:10}
 
-transactionAuthorizationRequested.eventOffsetSeconds=${AUTHORIZATION_REQUESTED_RETRY_EVENT_BASE_INTERVAL_SECONDS}
-transactionAuthorizationRequested.maxAttempts=${AUTHORIZATION_REQUESTED_RETRY_EVENT_MAX_ATTEMPTS}
-transactionAuthorizationRequested.paymentTokenValidityTimeOffset=${AUTHORIZATION_REQUESTED_RETRY_EVENT_PAYMENT_TOKEN_VALIDITY_TIME_OFFSET:10}
+transactionAuthorizationOutcomeWaiting.eventOffsetSeconds=${AUTHORIZATION_OUTCOME_WAITING_EVENT_BASE_INTERVAL_SECONDS}
+transactionAuthorizationOutcomeWaiting.maxAttempts=${AUTHORIZATION_OUTCOME_WAITING_EVENT_MAX_ATTEMPTS}
+transactionAuthorizationOutcomeWaiting.paymentTokenValidityTimeOffsetSeconds=${AUTHORIZATION_OUTCOME_WAITING_EVENT_PAYMENT_TOKEN_VALIDITY_TIME_OFFSET_SECONDS:10}
 
 notificationRetry.eventOffsetSeconds=${NOTIFICATION_RETRY_EVENT_BASE_INTERVAL_SECONDS}
 notificationRetry.maxAttempts=${NOTIFICATION_RETRY_EVENT_MAX_ATTEMPTS}
