--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -86,3 +86,11 @@ redisStream.eventController.failOnErrorCreatingConsumerGroup=${REDIS_STREAM_EVEN
 eventController.status.pollingChron=${EVENT_CONTROLLER_STATUS_POLLING_CHRON}
 
 spring.task.scheduling.pool.size=5
+
+#Redirect configuration
+redirect.paymentTypeCodeList=${REDIRECT_PAYMENT_TYPE_CODE_LIST}
+redirect.pspUrlMapping=${REDIRECT_URL_MAPPING}
+node.forwarder.apiKey=${NODE_FORWARDER_API_KEY}
+node.forwarder.url=${NODE_FORWARDER_URL}
+node.forwarder.readTimeout=${NODE_FORWARDER_READ_TIMEOUT}
+node.forwarder.connectionTimeout=${NODE_FORWARDER_CONNECTION_TIMEOUT}
