--- a/pom.xml
+++ b/pom.xml
@@ -464,6 +464,28 @@
 							</configOptions>
 						</configuration>
 					</execution>
+					<execution>
+						<id>redirect-api-v1</id>
+						<goals>
+							<goal>generate</goal>
+						</goals>
+						<configuration>
+							<inputSpec>./api-spec/client/openapi/redirect/redirect-api.yaml</inputSpec>
+							<generatorName>java</generatorName>
+							<library>webclient</library>
+							<generateApiDocumentation>false</generateApiDocumentation>
+							<generateApiTests>false</generateApiTests>
+							<generateModelTests>false</generateModelTests>
+							<generateSupportingFiles>true</generateSupportingFiles>
+							<configOptions>
+								<swaggerAnnotations>false</swaggerAnnotations>
+								<openApiNullable>false</openApiNullable>
+							</configOptions>
+							<modelPackage>it.pagopa.generated.ecommerce.redirect.v1.dto</modelPackage>
+							<apiPackage>it.pagopa.generated.ecommerce.redirect.v1.api</apiPackage>
+							<modelNameSuffix>dto</modelNameSuffix>
+						</configuration>
+					</execution>
 				</executions>
 			</plugin>
 			<plugin>
