fix: code suggestions

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -88,7 +88,7 @@ eventController.status.pollingChron=${EVENT_CONTROLLER_STATUS_POLLING_CHRON}
 spring.task.scheduling.pool.size=5
 
 #Redirect configuration
-redirect.paymentTypeCodeList=${REDIRECT_PAYMENT_TYPE_CODE_LIST}
+redirect.paymentTypeCodes=${REDIRECT_PAYMENT_TYPE_CODES}
 redirect.pspUrlMapping=${REDIRECT_URL_MAPPING}
 node.forwarder.apiKey=${NODE_FORWARDER_API_KEY}
 node.forwarder.url=${NODE_FORWARDER_URL}
