fix: update env example

--- a/.env.example
+++ b/.env.example
@@ -73,9 +73,9 @@ REDIS_STREAM_EVENT_CONTROLLER_CONSUMER_GROUP_PREFIX=event-dispatcher-consumer-gr
 REDIS_STREAM_EVENT_CONTROLLER_CONSUMER_NAME_PREFIX=event-dispatcher-consumer-name
 EVENT_CONTROLLER_STATUS_POLLING_CHRON=*/10 * * * * *
 
-REDIRECT_PAYMENT_TYPE_CODES=RBPR
+REDIRECT_PAYMENT_TYPE_CODES=REDIRECT-RBPR
 NODE_FORWARDER_API_KEY=node-forwarder-api-key
 NODE_FORWARDER_URL=http://localhost:8096
-REDIRECT_URL_MAPPING={RBPR:'http://localhost:8096/RBPR/redirections/refunds'}
+REDIRECT_URL_MAPPING={'REDIRECT-RBPR':'http://localhost:8096/RBPR/redirections'}
 NODE_FORWARDER_READ_TIMEOUT=10000
 NODE_FORWARDER_CONNECTION_TIMEOUT=10000
