feat: add redirect api client configuration (#237)
* feat: add redirect api client configuration

* fix: code refactoring

* Update src/main/kotlin/it/pagopa/ecommerce/eventdispatcher/config/RedirectConfigurationsBuilder.kt

Co-authored-by: Giovanni Berti <giovanni.berti@pagopa.it>

* Update src/main/kotlin/it/pagopa/ecommerce/eventdispatcher/config/RedirectConfigurationsBuilder.kt

Co-authored-by: Giovanni Berti <giovanni.berti@pagopa.it>

* Update src/main/kotlin/it/pagopa/ecommerce/eventdispatcher/config/RedirectConfigurationsBuilder.kt

Co-authored-by: Giovanni Berti <giovanni.berti@pagopa.it>

* fix: code suggestions

* fix: align env example

* fix: secret ref

* fix: update secret ref

* Chk 2629 redirect refund redirect refund integration (#239)

* feat: add redirect api client configuration

* fix: code refactoring

* fix: add logs

* fix: junit tests

* fix: junit tests

* fix: align env example variables

* fix: spotless

* fix: test

* fix: add tests for coverage

* fix: test

* fix: test

* fix: handle refunds endpoints as a single conf map

* fix: log refactoring

* fix: update env example

---------

Co-authored-by: Giovanni Berti <giovanni.berti@pagopa.it>

--- a/src/test/resources/application.test.properties
+++ b/src/test/resources/application.test.properties
@@ -76,3 +76,11 @@ redisStream.eventController.consumerGroupPrefix=event-dispatcher
 redisStream.eventController.consumerNamePrefix=event-dispatcher
 redisStream.eventController.failOnErrorCreatingConsumerGroup=false
 eventController.status.pollingChron=*/10 * * * * *
+
+
+node.forwarder.apiKey=node-forwarder-api-key
+node.forwarder.url=http://localhost/checkout-redirect/forwarder
+redirect.paymentTypeCodes=psp1-redirect,psp2-redirect
+redirect.pspUrlMapping={"psp1-redirect":'http://localhost:8096/redirections',"psp2-redirect":'http://localhost:8096/redirections'}
+node.forwarder.readTimeout=10000
+node.forwarder.connectionTimeout=10000
