feat: add NPG APM psp api key mapping

--- a/src/test/resources/application.test.properties
+++ b/src/test/resources/application.test.properties
@@ -70,6 +70,12 @@ npg.connectionTimeout=1000
 npg.client.apiKey=npg-api-key
 npg.authorization.cards.keys={"psp1":"key1","psp2":"key2"}
 npg.authorization.cards.pspList=psp1,psp2
+npg.authorization.paypal.keys={"psp1":"paypal-key1","psp2":"paypal-key2"}
+npg.authorization.paypal.pspList=psp1,psp2
+npg.authorization.bancomatpay.keys={"psp1":"bancomatpay-key1","psp2":"bancomatpay-key2"}
+npg.authorization.bancomatpay.pspList=psp1,psp2
+npg.authorization.mybank.keys={"psp1":"mybank-key1","psp2":"mybank-key2"}
+npg.authorization.mybank.pspList=psp1,psp2
 
 redisStream.eventController.streamKey=event-dispatcher-commands
 redisStream.eventController.consumerGroupPrefix=event-dispatcher
