--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -78,7 +78,12 @@ npg.connectionTimeout=${NPG_CONNECTION_TIMEOUT}
 npg.client.apiKey=${NPG_API_KEY}
 npg.authorization.cards.keys=${NPG_CARDS_PSP_KEYS}
 npg.authorization.cards.pspList=${NPG_CARDS_PSP_LIST}
-
+npg.authorization.paypal.keys=${NPG_PAYPAL_PSP_KEYS}
+npg.authorization.paypal.pspList=${NPG_PAYPAL_PSP_LIST}
+npg.authorization.bancomatpay.keys=${NPG_BANCOMATPAY_PSP_KEYS}
+npg.authorization.bancomatpay.pspList=${NPG_BANCOMATPAY_PSP_LIST}
+npg.authorization.mybank.keys=${NPG_MYBANK_PSP_KEYS}
+npg.authorization.mybank.pspList=${NPG_MYBANK_PSP_LIST}
 redisStream.eventController.streamKey=${REDIS_STREAM_EVENT_CONTROLLER_STREAM_KEY}
 redisStream.eventController.consumerGroupPrefix=${REDIS_STREAM_EVENT_CONTROLLER_CONSUMER_GROUP_PREFIX}
 redisStream.eventController.consumerNamePrefix=${REDIS_STREAM_EVENT_CONTROLLER_CONSUMER_NAME_PREFIX}
