fix: update env local

--- a/.env.example
+++ b/.env.example
@@ -79,3 +79,9 @@ NODE_FORWARDER_URL=http://localhost:8096
 REDIRECT_URL_MAPPING={'REDIRECT-RBPR':'http://localhost:8096/RBPR/redirections'}
 NODE_FORWARDER_READ_TIMEOUT=10000
 NODE_FORWARDER_CONNECTION_TIMEOUT=10000
+NPG_PAYPAL_PSP_LIST=BCITITMM
+NPG_PAYPAL_PSP_KEYS={"BCITITMM":"BCITITMM-api-key-paypal"}
+NPG_BANCOMATPAY_PSP_LIST=BCITITMM
+NPG_BANCOMATPAY_PSP_KEYS={"BCITITMM":"BCITITMM-api-key-bancomatpay"}
+NPG_MYBANK_PSP_LIST=BCITITMM
+NPG_MYBANK_PSP_KEYS={"BCITITMM":"BCITITMM-api-key-mybank"}
