chore(conf): add mooney as psp for paypal

--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -131,7 +131,7 @@ microservice-chart:
     ECS_SERVICE_NAME: pagopa-ecommerce-event-dispatcher-service
     ECS_SERVICE_ENVIRONMENT: dev
     NPG_CARDS_PSP_LIST: "BCITITMM,CIPBITMM,BIC36019,UNCRITMM,BPPIITRRXXX,PPAYITR1XXX,BNLIITRR"
-    NPG_PAYPAL_PSP_LIST: "BCITITMM"
+    NPG_PAYPAL_PSP_LIST: "BCITITMM,SIGPITM1XXX"
     NPG_MYBANK_PSP_LIST: "BCITITMM"
     NPG_BANCOMATPAY_PSP_LIST: "BCITITMM"
     REDIS_STREAM_EVENT_CONTROLLER_STREAM_KEY: "event-dispatcher-commands"
